# beatrice-trainer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
assets/: README.md  default_config.json
assets/ir/: 0000.flac  0001.flac  0002.flac  0003.flac  0004.flac  0005.flac  0006.flac  0007.flac  0008.flac  0009.flac  0010.flac  0011.flac  0012.flac  0013.flac  0014.flac  0015.flac  0016.flac  0017.flac  0018.flac  0019.flac  0020.flac  0021.flac  0022.flac  0023.flac  0024.flac  0025.flac  0026.flac  0027.flac  0028.flac  0029.flac  0030.flac  0031.flac  0032.flac  0033.flac  0034.flac  0035.flac  0036.flac  0037.flac  0038.flac  0039.flac  (+960 more)
assets/noise/: -0g8EILYVyw.flac  -1zGTyKQnvw.flac  -4B9Xf1b1yI.flac  -5bUWtaoJ7U.flac  -7_o_GhpZpM.flac  -9OYpI6p8i4.flac  -9nYgBgCTtI.flac  -A9bKRkhJo0.flac  -BdXZjYiRUQ.flac  -CirKYqIfgI.flac  -JIwqWxJ1KI.flac  -KrDQXnlXRw.flac  -MnQ4IjEreg.flac  -PN0FyUJTig.flac  -RP1-cUHLT8.flac  -Ss70a9E8zk.flac  -XPgaXTF6M8.flac  -Xa-AmWQ71E.flac  -YpovYcGB4I.flac  -__L3T1Yv_4.flac  -em8ZaHR2fg.flac  -hdolK7F5lM.flac  -jT_4hrpYvo.flac  -n4BEVTbMP8.flac  -oUuF7nuv9M.flac  -pM0aXt3C3s.flac  -rPghAZFJH8.flac  -rxWFrTlJEY.flac  -u5Kjg1CBgk.flac  -wBISA-_DNM.flac  00kiylShRxU.flac  08INOGepJ9A.flac  08aA8osT9nE.flac  08ibPbVUo68.flac  0CMjmud6fp4.flac  0DNXCuOfI6A.flac  0EB0GRDhL3c.flac  0Fym_Eo51p0.flac  0Hwm8Dj8Z5w.flac  0On6-JiVwRs.flac  (+1959 more)
assets/pretrained/: 003b_checkpoint_03000000.pt  008_1_checkpoint_00300000.pt  040c_checkpoint_libritts_r_200_02300000.pt  079_checkpoint_libritts_r_200_02400000.pt
beatrice_trainer/: __main__.py
